# mpv-rpc

./: Cargo.toml  README.md  flake.nix  install.sh  install_lib.sh  rm_lib.sh  rust-toolchain.toml  shell.nix
.github/workflows/: build.yml
config/: rpc.json
src/: basic_listener.rs  config.rs  discord_client.rs  lib.rs  logging.rs  mpv_event_handler.rs  mpv_event_queue.rs  plugin.rs  utils.rs
src/discord_client/: music_brainz.rs
src/logging/: macros.rs
src/mpv_event_handler/: events.rs
src/mpv_event_queue/: events.rs
